--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="thank-you" id="thankYouMessage" aria-live="polite" hidden>
             <h3>Thanks for reaching out.</h3>
             <p>
-              Your message was submitted successfully. I will review it and follow up within 1-2 business days.
+              Thank you for your message. I will review it and be in touch as soon as I can.
             </p>
           </div>
         </div>
